<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Galaxy Specimen Tracker</string>

    <string name="glb_save">Save</string>
    <string name="glb_set">Set</string>
    <string name="glb_settings">Settings</string>
    <string name="glb_scan_barcode">Scan Barcode</string>
    <string name="glb_create">Create</string>
    <string name="glb_create_derivative">Create derivative specimen</string>
    <string name="glb_update">Update</string>
    <string name="glb_close">Close</string>
    <string name="glb_no_value">NONE</string>
    <string name="glb_yes">Yes</string>
    <string name="glb_no">No</string>
    <string name="glb_loading">Loading…</string>

    <string name="net_specimen_created">Specimen has been successfully created</string>
    <string name="net_specimen_updated">Specimen has been successfully updated</string>
    <string name="net_error_incomplete_response">Response is incomplete</string>
    <string name="net_error_unknown">Unknown error occurred</string>

    <string name="settings_title">Settings</string>
    <string name="settings_key">API access key</string>
    <string name="settings_key_hint">Please enter API key</string>
    <string name="settings_key_fetch">Fetch API key</string>
    <string name="settings_project_id">ID of current project</string>
    <string name="settings_project_id_hint">Please enter project ID</string>
    <string name="settings_galaxy_server_url">Galaxy server</string>
    <string name="settings_galaxy_server_url_hint">Please enter Galaxy URL</string>
    <string name="settings_saved_msg">Settings saved</string>

    <string name="api_key_title">Fetch API key</string>
    <string name="api_key_info">Enter your username and password to Galaxy portal to fetch your personal API key:</string>
    <string name="api_key_username">Username</string>
    <string name="api_key_username_hint">Enter your username</string>
    <string name="api_key_password">Password</string>
    <string name="api_key_password_hint">Enter your password</string>
    <string name="api_key_fetch">Fetch</string>

    <string name="scan_hint">Aim a code.</string>
    <string name="scan_error_invalid_settings">Configuration is not valid.\nGo to Settings first!</string>
    <string name="scan_error">Error occurred while scanning.</string>

    <string name="specimen_title_create">New specimen</string>
    <string name="specimen_title_derivative">Derivative specimen</string>
    <string name="specimen_title_update">Specimen</string>
    <string name="specimen_ancestor">Ancestor</string>
    <string name="specimen_details">Details</string>
    <string name="specimen_sex">Sex</string>
    <string name="specimen_derivative">Derivative</string>
    <string name="specimen_participant_dob">Participant dob</string>
    <string name="specimen_create_time">Create time</string>
    <string name="specimen_update_time">Update time</string>
    <string name="specimen_collection_date">Date of collection</string>
    <string name="specimen_sent_date">Date sent</string>
    <string name="specimen_flag_ngs">NGS</string>
    <string name="specimen_flag_sgr">SGR</string>
    <string name="specimen_flag_gen">GEN</string>
    <string name="specimen_flag_hap">HAP</string>
    <string name="specimen_flag_pcr">PCR</string>
    <string name="specimen_location_title">Set location</string>
    <string name="specimen_location">Location</string>
    <string name="specimen_location_set">Set Location</string>
    <string name="specimen_location_change">Change Location</string>
    <string name="specimen_type_title">Choose type</string>
    <string name="specimen_type">Type</string>
    <string name="specimen_type_set">Set Type</string>
    <string name="specimen_type_change">Change Type</string>
    <string name="specimen_state_title">Choose state</string>
    <string name="specimen_state">State</string>
    <string name="specimen_state_set">Set State</string>
    <string name="specimen_state_change">Change State</string>
    <string name="specimen_family">Family</string>
    <string name="specimen_family_set">Set Family</string>
    <string name="specimen_family_title">Enter Family number</string>
    <string name="specimen_participant_relationship">Relationship</string>
    <string name="specimen_participant_relationship_set">Set Participant relationship</string>
    <string name="specimen_participant_relationship_title">Choose participant relationship</string>
    <string name="specimen_note">Note</string>
    <string name="specimen_note_set">Set Note</string>
    <string name="specimen_note_title">Enter Note</string>
    <string-array name="specimen_state_values">
        <item>new</item>
        <item>onroad</item>
        <item>psu</item>
        <item>depleted</item>
        <item>lost</item>
        <item>discarded</item>
    </string-array>
    <string-array name="specimen_type_material_values">
        <item>blood</item>
        <item>buccal</item>
        <item>hair</item>
        <item>breastmilk</item>
        <item>stool</item>
        <item>vaginal_swab</item>
        <item>placenta</item>
        <item>cord_blood</item>
        <item>tissue</item>
        <item>rectal_swab</item>
        <item>skin_swab</item>
    </string-array>
    <string-array name="specimen_type_acid_values">
        <item>dna</item>
        <item>rna</item>
    </string-array>
    <string-array name="specimen_type_acid_sub_values">
        <item>amplicon</item>
        <item>library</item>
        <item>enriched_mtdna</item>
    </string-array>
    <string name="specimen_location_fridge">Fridge</string>
    <string name="specimen_location_shelf">Shelf</string>
    <string name="specimen_location_rack">Rack</string>
    <string name="specimen_location_box">Box</string>
    <string name="specimen_location_spot">Spot</string>
    <string-array name="specimen_location_spot1_values">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
    </string-array>
    <string-array name="specimen_location_spot2_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string-array name="specimen_participant_relationship_values">
        <item>M</item>
        <item>D</item>
        <item>C1</item>
        <item>C2</item>
        <item>C3</item>
        <item>C4</item>
        <item>C5</item>
        <item>C6</item>
        <item>C7</item>
        <item>C8</item>
        <item>C9</item>
    </string-array>
</resources>
