<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ContentFrame.Fill"
    android:orientation="vertical"
    android:paddingTop="0dp"
    android:paddingBottom="0dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            style="@style/Widget.TextView.Label"
            android:text="@string/specimen_location"
            />


        <TextView
            android:id="@+id/location"
            style="@style/Widget.TextView.Value"
            />
    </LinearLayout>

    <Button
        android:id="@+id/set_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/specimen_location_set"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        >

        <TextView
            style="@style/Widget.TextView.Label"
            android:text="@string/specimen_type"
            />


        <TextView
            android:id="@+id/type"
            style="@style/Widget.TextView.Value"
            />
    </LinearLayout>

    <Button
        android:id="@+id/set_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/specimen_type_set"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        >

        <TextView
            style="@style/Widget.TextView.Label"
            android:text="@string/specimen_state"
            />


        <TextView
            android:id="@+id/state"
            style="@style/Widget.TextView.Value"
            />
    </LinearLayout>

    <Button
        android:id="@+id/set_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/specimen_state_set"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        >

        <TextView
            style="@style/Widget.TextView.Label"
            android:text="@string/specimen_family"
            />


        <TextView
            android:id="@+id/family"
            style="@style/Widget.TextView.Value"
            />
    </LinearLayout>

    <Button
        android:id="@+id/set_family"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/specimen_family_set"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        >

        <TextView
            style="@style/Widget.TextView.Label"
            android:text="@string/specimen_participant_relationship"
            />


        <TextView
            android:id="@+id/participant_relationship"
            style="@style/Widget.TextView.Value"
            />
    </LinearLayout>

    <Button
        android:id="@+id/set_participant_relationship"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/specimen_participant_relationship_set"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        >

        <TextView
            style="@style/Widget.TextView.Label"
            android:text="@string/specimen_note"
            />


        <TextView
            android:id="@+id/note"
            style="@style/Widget.TextView.Value"
            />
    </LinearLayout>

    <Button
        android:id="@+id/set_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/specimen_note_set"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:enabled="false"
            android:minWidth="200dp"
            android:text="@string/glb_create"
            />
    </RelativeLayout>
</LinearLayout>
