<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ContentFrame.Fill"
    android:orientation="vertical"
    >

    <LinearLayout
        style="@style/RowLabelValue"
        android:layout_marginTop="0dp"
        >

        <TextView
            style="@style/Widget.TextView.Label"
            android:text="@string/specimen_location_fridge"
            />


        <EditText
            android:id="@+id/fridge"
            style="@style/Widget.EditText.Value"
            />
    </LinearLayout>

    <LinearLayout style="@style/RowLabelValue">

        <TextView
            style="@style/Widget.TextView.Label"
            android:text="@string/specimen_location_shelf"
            />


        <EditText
            android:id="@+id/shelf"
            style="@style/Widget.EditText.Value"
            />
    </LinearLayout>

    <LinearLayout style="@style/RowLabelValue">

        <TextView
            style="@style/Widget.TextView.Label"
            android:text="@string/specimen_location_rack"
            />


        <EditText
            android:id="@+id/rack"
            style="@style/Widget.EditText.Value"
            />
    </LinearLayout>

    <LinearLayout style="@style/RowLabelValue">

        <TextView
            style="@style/Widget.TextView.Label"
            android:text="@string/specimen_location_box"
            />


        <EditText
            android:id="@+id/box"
            style="@style/Widget.EditText.Value"
            />
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_vertical_margin"
        android:gravity="center_horizontal"
        android:text="@string/specimen_location_spot"
        />

    <LinearLayout
        style="@style/RowLabelValue"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        >

        <ListView
            android:id="@+id/spot_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />

        <ListView
            android:id="@+id/spot_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />
    </LinearLayout>


    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/content_vertical_margin"
        android:enabled="false"
        android:minWidth="200dp"
        android:text="@string/glb_set"
        />

</LinearLayout>
