<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ContentFrame.Fill"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            style="@style/Widget.TextView.Label"
            android:text="@string/specimen_location"
            />


        <TextView
            android:id="@+id/location"
            style="@style/Widget.TextView.Value"
            android:layout_weight="3"
            />
    </LinearLayout>

    <Button
        android:id="@+id/set_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/specimen_location_change"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_vertical_margin"
        android:orientation="horizontal"
        >

        <TextView
            style="@style/Widget.TextView.Label"
            android:text="@string/specimen_type"
            />


        <TextView
            android:id="@+id/type"
            style="@style/Widget.TextView.Value"
            android:layout_weight="3"
            />
    </LinearLayout>

    <Button
        android:id="@+id/set_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/specimen_type_change"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_vertical_margin"
        android:orientation="horizontal"
        >

        <TextView
            style="@style/Widget.TextView.Label"
            android:text="@string/specimen_state"
            />


        <TextView
            android:id="@+id/state"
            style="@style/Widget.TextView.Value"
            android:layout_weight="3"
            />
    </LinearLayout>

    <Button
        android:id="@+id/set_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/specimen_state_change"
        />

    <LinearLayout style="@style/RowLabelValue">

        <CheckedTextView
            android:id="@+id/flag_1"
            style="@style/Widget.CompoundButton.RadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            />

        <CheckedTextView
            android:id="@+id/flag_2"
            style="@style/Widget.CompoundButton.RadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            />

        <CheckedTextView
            android:id="@+id/flag_3"
            style="@style/Widget.CompoundButton.RadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            />

        <CheckedTextView
            android:id="@+id/flag_4"
            style="@style/Widget.CompoundButton.RadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            />

        <CheckedTextView
            android:id="@+id/flag_5"
            style="@style/Widget.CompoundButton.RadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:enabled="false"
            android:minWidth="200dp"
            android:text="@string/glb_update"
            />
    </RelativeLayout>

    <Button
        android:id="@+id/derivative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/glb_create_derivative"
        />
</LinearLayout>
